<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">
    <androidx.cardview.widget.CardView
        android:id="@+id/ccard"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/shape">
        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="15dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="22sp"
                android:id="@+id/name"
                android:textColor="@color/textcolor">

            </TextView>
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_below="@+id/name"
                android:text="@string/accno"
                android:textSize="22sp"
                android:id="@+id/accno"
                android:textColor="@color/textcolor">

            </TextView>
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_below="@+id/accno"
                android:text="@string/email"
                android:textSize="22sp"
                android:id="@+id/email"
                android:textColor="@color/textcolor">

            </TextView>
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_below="@+id/email"
                android:text="@string/balance"
                android:textSize="22sp"
                android:id="@+id/balance"
                android:textColor="@color/textcolor">

            </TextView>
            <TextView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:gravity="start|center"
                android:layout_alignParentRight="true"
                android:text="@string/cname"
                android:layout_marginRight="72dp"
                android:textSize="22sp"
                android:id="@+id/cname"
                android:textColor="@color/textcolor"
                android:layout_marginEnd="72dp"
                android:layout_alignParentEnd="true">

            </TextView>
            <TextView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:gravity="start|center"
                android:layout_marginRight="72dp"
                android:layout_below="@+id/cname"
                android:text="@string/c_accno"
                android:textSize="22sp"
                android:id="@+id/c_accno"
                android:textColor="@color/textcolor"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="72dp">

            </TextView>
            <TextView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:gravity="start|center"
                android:layout_marginRight="72dp"
                android:layout_below="@+id/c_accno"
                android:text="@string/c_email"
                android:textSize="22sp"
                android:id="@+id/c_email"
                android:textColor="@color/textcolor"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="72dp">

            </TextView>
            <TextView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:gravity="start|center"
                android:layout_marginRight="72dp"
                android:layout_below="@+id/c_email"
                android:text="@string/c_balance"
                android:textSize="22sp"
                android:id="@+id/c_balance"
                android:textColor="@color/textcolor"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="72dp">

            </TextView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:background="@drawable/shape"
        android:text="@string/send"
        android:textColor="@color/textcolor"
        app:layout_constraintBottom_toTopOf="@+id/homebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ccard"
        app:layout_constraintVertical_bias="0.991" />

    <Button
        android:id="@+id/homebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="165dp"
        android:background="@drawable/shape"
        android:text="@string/home"
        android:textColor="@color/textcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>