<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">

    <ListView
        android:id="@+id/TransactionDetailsListView"
        android:layout_width="416dp"
        android:layout_height="342dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/textcolor"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:singleLine="true"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TransactionDetailsListView"
        android:autofillHints=""
        android:inputType="number" tools:targetApi="lollipop" />

    <Button
        android:id="@+id/complete"
        android:layout_width="194dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape"
        android:text="@string/complete_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="194dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/shape"
        android:text="@string/cancel_transaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complete"
        app:layout_constraintVertical_bias="0.072" />
</androidx.constraintlayout.widget.ConstraintLayout>